module-system/sov-modules-macros/tests/module_info/no_generics.rs
use sov_modules_macros::ModuleInfo;

#[derive(ModuleInfo)]
struct TestStruct {}

fn main() {}
